# sphinxcontrib-applehelp

./: .gitignore  CHANGES  CHANGES.rst  README.rst  babel.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: create-release.yml  test.yml  transifex.yml
sphinxcontrib/applehelp/: __init__.py  version.py
tests/: conftest.py  test_applehelp.py
