[build-system]
requires = ["flit_core>=3.7"]
build-backend = "flit_core.buildapi"

# project metadata
[project]
name = "sphinxcontrib.applehelp"
description = "sphinxcontrib-applehelp is a Sphinx extension which outputs Apple help books"
readme = "README.rst"
urls.Changelog = "https://www.sphinx-doc.org/en/master/changes.html"
urls.Code = "https://github.com/sphinx-doc/sphinxcontrib-applehelp"
urls.Download = "https://pypi.org/project/sphinxcontrib-applehelp/"
urls.Homepage = "https://www.sphinx-doc.org/"
urls."Issue tracker" = "https://github.com/sphinx-doc/sphinx/issues"
license.text = "BSD-2-Clause"
requires-python = ">=3.8"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
lint = [
    "flake8",
    "mypy",
    "docutils-stubs",
]

[[project.authors]]
name = "Georg Brandl"
email = "georg@python.org"

[tool.flit.sdist]
include = [
    "LICENSE",
    "CHANGES",
    # Tests
    "tests/",
    "tox.ini",
]
exclude = [
    "doc/_build",
]
